<resources>
    <string name="app_name">Marine Rescue</string>
    <string name="speed_distance_time_calculator_subheading">Enter any two of the factors below to find the third:</string>
    <string name="speed">Speed:</string>
    <string name="distance">Distance:</string>
    <string name="distance_from_ipp">Distance from IPP:</string>
    <string name="time">Time:</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="kts">(Kts)</string>
    <string name="nm">(NM)</string>
    <string name="hours">(Hours)</string>
    <string name="calculate_speed_distance_time">Calculate Speed/Distance/Time</string>
    <string name="enter_two_of_three">Please enter values for two of the three factors above.</string>
    <string name="enter_speed">Please enter a speed in Knots.</string>
    <string name="enter_distance">Please enter a distance in Nautical Miles.</string>
    <string name="enter_time">Please enter a time in hours.
(Must be decimals of hours e.g. 1.5 hours = 1 hour 30 minutes.)</string>
    <string name="please_enter_a_wind_speed">Please enter a wind speed</string>
    <string name="please_enter_a_wind_direction">Please enter a wind direction</string>
    <string name="no_drift_object_found">"No drift object found matching that criteria. Please check your selections are correct."</string>
    <string name="calculate_drift_vector">Calculate Drift Vector</string>
    <string name="wind">Wind:</string>
    <string name="category">Category:</string>
    <string name="sub_category">Sub-Category:</string>
    <string name="description">Description:</string>
    <string name="secondary_description">Secondary Description:</string>
    <string name="total_drift_Vector">Total Drift Vector</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="hrs">(Hrs)</string>
    <string name="min">(Min)</string>
    <string name="please_enter_elapsed_time">Please enter elapsed time (hh:mm)</string>
    <string name="from">From:</string>
    <string name="current">Current:</string>
    <string name="please_enter_current_speed">Please enter current speed</string>
    <string name="please_enter_current_direction">Please enter current direction</string>
    <string name="at">At:</string>
    <string name="deg_t">(Deg T)</string>
    <string name="bearing">Bearing:</string>
    <string name="divergence">Divergence:</string>
    <string name="drift_object">Drift Object:</string>
    <string name="leeway">Leeway:</string>
    <string name="kts_hr">(Kts / hr)</string>
    <string name="wind_speed_is_invalid">Wind speed is invalid.</string>
    <string name="wind_direction_is_invalid">Wind direction is invalid.</string>
    <string name="current_speed_is_invalid">Current speed is invalid.</string>
    <string name="current_direction_is_invalid">Current direction is invalid.</string>
    <string name="elapsed_time_is_invalid">Elapsed time is invalid.</string>
    <string name="search_area_radius">Search Area Radius:</string>
    <string name="view_calculation">View Calculation</string>
</resources>
