<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F3280"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".SpeedDistanceTimeCalculator">

    <EditText
        android:id="@+id/ET_distance"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/TV_distance"
        app:layout_constraintTop_toBottomOf="@+id/ET_speed" />

    <EditText
        android:id="@+id/ET_time"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/TV_time"
        app:layout_constraintTop_toBottomOf="@+id/ET_distance" />

    <TextView
        android:id="@+id/TV_nm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/nm"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ET_distance"
        app:layout_constraintStart_toEndOf="@+id/ET_distance" />

    <TextView
        android:id="@+id/TV_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/hours"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ET_time"
        app:layout_constraintStart_toEndOf="@+id/ET_time" />

    <Button
        android:id="@+id/B_findSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:background="#0566B3"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_time" />

    <TextView
        android:id="@+id/TV_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/speed_distance_time_calculator_subheading"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ET_speed"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/TV_speed"
        app:layout_constraintTop_toBottomOf="@+id/TV_subtitle" />

    <TextView
        android:id="@+id/TV_windKts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/kts"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ET_speed"
        app:layout_constraintStart_toEndOf="@+id/ET_speed" />

    <TextView
        android:id="@+id/TV_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:text="@string/speed"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ET_speed"
        app:layout_constraintEnd_toStartOf="@+id/ET_speed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TV_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/distance"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ET_distance"
        app:layout_constraintEnd_toStartOf="@+id/ET_distance"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TV_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ET_time"
        app:layout_constraintEnd_toStartOf="@+id/ET_time"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>