<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_dialogBoxBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313132">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFEB3B"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_dialogTitle"></LinearLayout>

    <TextView
        android:id="@+id/TV_dialogTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/total_drift_Vector"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/B_closeDialogBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance_from_ipp"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_dialogTitle" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="Critical Factors"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kts"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_windSpeed"
        app:layout_constraintStart_toEndOf="@+id/TV_windSpeed" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/leeway"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/current"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/TV_leeway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/TV_currentSpeed" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/deg_t"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_currentDirection"
        app:layout_constraintStart_toEndOf="@+id/TV_currentDirection" />

    <TextView
        android:id="@+id/TV_currentSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView33"
        app:layout_constraintStart_toEndOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/kts"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_currentSpeed"
        app:layout_constraintStart_toEndOf="@+id/TV_currentSpeed" />

    <TextView
        android:id="@+id/TV_windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/TV_currentSpeed" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/wind"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_driftObject" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/drift_object"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kts_hr"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_leeway"
        app:layout_constraintStart_toEndOf="@+id/TV_leeway" />

    <TextView
        android:id="@+id/TV_windDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="Direction"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView30"
        app:layout_constraintStart_toEndOf="@+id/textView44" />

    <TextView
        android:id="@+id/TV_currentDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
        app:layout_constraintStart_toEndOf="@+id/textView45" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/bearing"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/divergence"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/TV_bearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/TV_distance" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/deg_t"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_divergence"
        app:layout_constraintStart_toEndOf="@+id/TV_divergence" />

    <TextView
        android:id="@+id/TV_divergence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="@+id/TV_bearing" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/deg_t"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_bearing"
        app:layout_constraintStart_toEndOf="@+id/TV_bearing" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nm"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_distance"
        app:layout_constraintStart_toEndOf="@+id/TV_distance" />

    <TextView
        android:id="@+id/TV_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="0"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <TextView
        android:id="@+id/TV_driftObject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="Category, subcategory, primary descriptors, secondary descriptors"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/from"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView30"
        app:layout_constraintStart_toEndOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/at"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
        app:layout_constraintStart_toEndOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/elapsed_time"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/TV_elapsedTimeHrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="3:6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView46"
        app:layout_constraintStart_toEndOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/hrs"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_elapsedTimeHrs"
        app:layout_constraintStart_toEndOf="@+id/TV_elapsedTimeHrs" />

    <TextView
        android:id="@+id/TV_elapsedTimeMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView48"
        app:layout_constraintStart_toEndOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/min"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_elapsedTimeMins"
        app:layout_constraintStart_toEndOf="@+id/TV_elapsedTimeMins" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/search_area_radius"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/TV_searchAreaSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/TV_divergence" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nm"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_searchAreaSize"
        app:layout_constraintStart_toEndOf="@+id/TV_searchAreaSize" />

</androidx.constraintlayout.widget.ConstraintLayout>